# EmailNewsletterRust

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: main.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs
