[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4.4.0"
config = "0.13.3"
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4"] }
tracing = { version = "0.1.39", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.7"

[dev-dependencies]
once_cell = "1.18.0"
reqwest = "0.11.20"
